--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,7 @@ jobs:
             image: mysql:5.7
         # On passe des variables d'environnement, pour configurer notre conteneur
             env:
+              MYSQL_ROOT_USER: root
               MYSQL_ROOT_PASSWORD: pass 
               MYSQL_DATABASE: doggies 
         
