--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
         # runs-on: ubuntu-19.04
         runs-on: ubuntu-latest
         # On définit les steps (la liste des actions) à exécuter
-        
+        container: drakona/php:7.4-ci
         
         services:
       # On donne un nom à notre service, qu'on utilise dans notre .env 
