--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,5 +42,22 @@ jobs:
             
             - run: php bin/console doctrine:fixtures:load
             
-            
+    analysis:
+        runs-on: ubuntu-latest
+
+        steps:
+          - uses: actions/checkout@v2
+
+          - name: Set correct env file
+            run: cp .env.ci .env.local
+
+          - name: Install PHP CS Fixer
+            run: |
+              curl -L https://cs.symfony.com/download/php-cs-fixer-v3.phar -o php-cs-fixer.phar
+              chmod a+x ./php-cs-fixer.phar
+
+          - name: Run PHP CS Fixer check
+            run: ./php-cs-fixer.phar fix src --dry-run --diff
+
+
         
