--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,5 @@
+name: PHP Composer
+
 on: [push]
 
 jobs:
@@ -17,7 +19,7 @@ jobs:
           MYSQL_DATABASE: test
 
     steps:
-      -uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Set correct env file
         run: cp .env.ci .env.local
 
@@ -31,11 +33,11 @@ jobs:
         restore-keys: |
         ${{ runner.os }}-php-
 
-      -name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
 
       - name: Load fixtures
-      run: php bin/console doctrine:fixtures:load -n
+        run: php bin/console doctrine:fixtures:load -n
 
   analysis:
     runs-on: ubuntu-latest
