add stan analyse and twig file config

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,5 +59,15 @@ jobs:
           - name: Run PHP CS Fixer check
             run: ./php-cs-fixer-v3.phar fix src --dry-run --diff
 
+          - name: Run php bin/console lint:yaml config translations
+          - run: php bin/console lint:yaml config translations
+
+          - name: Run php bin/console lint:twig templates
+          - run: php bin/console lint:twig templates
+
+          - name: Run php phpstan.phar analyse
+          - run: php vendor/phpstan/phpstan/phpstan.phar analyse
+
+
 
         
