--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,13 +57,13 @@ jobs:
           - name: Run PHP CS Fixer check
             run: ./php-cs-fixer-v3.phar fix src --dry-run --diff
 
-          - name: Run php bin/console lint:yaml config translations
+          - name: Run yaml files checking
           - run: php bin/console lint:yaml config translations
 
-          - name: Run php bin/console lint:twig templates
+          - name: Run twig templates checking
           - run: php bin/console lint:twig templates
 
-          - name: Run php phpstan.phar analyse
+          - name: Run phpstan.phar analyse
           - run: php vendor/phpstan/phpstan/phpstan.phar analyse
 
 
