--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,8 +53,8 @@ jobs:
 
           - name: Install PHP CS Fixer
             run: |
-                  curl -L https://cs.symfony.com/download/php-cs-fixer-v3.phar -o php-cs-fixer.phar
-                  chmod a+x ./php-cs-fixer.phar
+                  curl -L https://cs.symfony.com/download/php-cs-fixer-v3.phar -o php-cs-fixer-v3.phar
+                  chmod a+x ./php-cs-fixer-v3.phar
 
           - name: Run PHP CS Fixer check
             run: ./php-cs-fixer-v3.phar fix src --dry-run --diff
