--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=8c120efd19c0c8ee7e6c3074a64e3424
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/doggies?serverVersion=5.7"
+# DATABASE_URL="mysql://db_use:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
